src/core-crm/objects/Invoice__c/fields/Cart__c.field-meta.xml
<CustomField>
    <fullName>Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to the cart that was checked out</description>
    <label>Cart</label>
    <referenceTo>WebCart</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>