src/core-crm/objects/Invoice__c/fields/Course_Connection__c.field-meta.xml
<CustomField>
    <fullName>Course_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to the course connection created when registering for the offering</description>
    <label>Course Connection</label>
    <referenceTo>hed__Course_Enrollment__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>