src/core-crm/objects/Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>This is date when the invoice needs to be paid</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>