src/core-crm/objects/Invoice__c/fields/Payee_ABN__c.field-meta.xml
<CustomField>
    <fullName>Payee_ABN__c</fullName>
    <label>Payee ABN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>