src/core-crm/objects/Invoice__c/fields/Payee_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Payee_Billing_Address__c</fullName>
    <description>Address on entity who will pay the Invoice</description>
    <label>Payee Billing Address</label>
    <type>TextArea</type>
</CustomField>