src/core-crm/objects/Invoice__c/fields/Payee_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Payee_Email_Address__c</fullName>
    <description>Email address on entity who will pay the Invoice</description>
    <label>Payee Email Address</label>
    <type>Email</type>
</CustomField>