src/core-crm/objects/Invoice__c/fields/Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_Name__c</fullName>
    <description>The entity who will pay the Invoice</description>
    <label>Payee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>